[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viko_shared"
version = "0.1.0"
description = "Shared database and Streamlit components for ViKO design tools."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ViKO Consulting Engineers" },
]

dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
include = ["viko_shared*"]
